# hpcgame3

./: .gitignore  README.md  read.md  writeup.md
C/handout/: market.h
D/handout/: d.txt  makefile  out.txt  out.txtq  sssp  sssp.cpp  sssp1.cpp  sssp2.cpp  sssp3.cpp  sssp4  sssp4.cpp  sssp6.cpp  sssp7.cpp  sssp8.cpp  sssp9.cpp
F/handout/: Makefile  checker  f.txt  gen  run_judge.sh  solver  solver.cpp  solver0.cpp  solver1.cpp  solver2.cpp
G/handout/: flash_attn-2.8.3-py3-none-any.whl  g.txt  prefill.py  prefill1.py
H/hpcgame2026.kernel-design-trial/: my_kdt_kernels.py  task4.txt
I/: ans.py  check.py  gc.py  i.txt
J/: ans  ans.cpp  baseline  j.txt
L/handout-sparse-attention/: l.txt  solution.py  test_sparse_attention_cpu.py
M/: m.txt
M/MRSpGemm/: CMakeLists.txt  serial_main.cpp
M/MRSpGemm/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  mr_spgemm_topk
M/MRSpGemm/data/A/: part-00000  part-00001
M/MRSpGemm/data/B/: part-00000  part-00001
M/MRSpGemm/src/: ans.cpp  spgemm_naive.cpp
M/__MACOSX/MRSpGemm/: ._src
